Fixed Menu Spacing, Added Logo, IconLeft and IconRight to MenuItem

--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -11,7 +11,6 @@
     align-items: center;
     background: $light-surface-primary;
     border: 1px solid $light-utility-border;
-    border-radius: $border-radius-2;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
@@ -21,10 +20,12 @@
 
     &__large {
         height: 48px;
+        border-radius: $border-radius-2;
     }
 
     &__medium {
         height: 32px;
+        border-radius: $border-radius-8;
     }
 
     &__error {
@@ -80,7 +81,7 @@
     justify-content: center;
     width: 16px;
     > svg {
-        width: 8px;
+        width: 16px;
     }
 }
 
@@ -111,12 +112,19 @@
     color: $light-text-unselected;
     cursor: pointer;
     display: flex;
-    flex-direction: column;
-    gap: $spacing-25;
-    justify-content: space-between;
-    padding-left: $spacing-50;
-    padding-top: $spacing-75;
-    padding-bottom: $spacing-75;
+    flex-direction: row;
+    gap: $spacing-50;
+    padding: $spacing-75 $spacing-50;
+
+    &__icon {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 24px;
+        > svg {
+            width: 24px;
+        } 
+    }
 
     &__title {
         @include font-style($height: none, $size: 100, $weight: medium);
@@ -135,4 +143,12 @@
         background: $light-utility-ui-background-hover;
         color: $light-text-action-link-primary-hover;
     }
+}
+
+.details {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-25;
+    justify-content: space-between;
+    width: 100%;
 }
